--- a/Gallery.html
+++ b/Gallery.html
@@ -60,58 +60,41 @@
     </section>
 </header>
 <main>
-    <section class="menu-galery">
-        <div class="Galery-container ">
-            <h3>Gallery</h3>
-            <div class="container  galery-container">
-                <div id="animated-thumbnails" class="col-md-4 col-sm-12">
-                    <a href="Assets/Img/sm5.jpg">
-                        <div class="card"
-                             style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('Assets/Img/sm5.jpg');">
-                            <div class="card-description">
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-
-            </div>
-            <a href="Gallery.html"><p>@todo pagination</p></a>
-        </div>
-
-    </section>
-</main>
-<section >
-    <h1 class="gallery-title">Gallery</h1>
-    <div class="galery">
-        <a href="Assets/Img/sm5.jpg">
+    <section >
+        <h1 class="gallery-title">Gallery</h1>
+        <div class="galery">
+            <a href="Assets/Img/sm5.jpg">
+                <img src="Assets/Img/sm5.jpg" alt="">
+            </a> <a href="Assets/Img/sm5.jpg">
             <img src="Assets/Img/sm5.jpg" alt="">
         </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a><a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a><a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a> <a href="Assets/Img/sm5.jpg">
-        <img src="Assets/Img/sm5.jpg" alt="">
-    </a>
-    </div>
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a> <a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a><a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a> <a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a> <a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a> <a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a><a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a> <a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a> <a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a> <a href="Assets/Img/sm5.jpg">
+            <img src="Assets/Img/sm5.jpg" alt="">
+        </a>
+        </div>
+        <h3>to do Pagination</h3>
 
-</section>
+    </section>
+
+</main>
+
 <footer>
     <section id="Footer">
         <div class="footer-dark">
