--- a/Index.html
+++ b/Index.html
@@ -80,70 +80,117 @@
         </div>
         <!-- or ul.my-slider > li -->
     </section>
-    <section id="Featured">
-        <div class="container">
-            <h3>New Menus</h3>
-            <div class="row">
-                <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
-                    <div class="Featured-card mr-5">
-                        <a href="#" class="img_container">
-                            <img src=" Assets/Img/Features.jpg" width="100%">
 
-                        </a>
-                        <div class="Featured-card-title ">
-                            <a href="# ">
-                                <h4> Shusi Shusi</h4>
-                            </a>
-                        </div>
-                    </div>
+    <section id="headcard">
+        <h3 class="head-card-title"> LAst added</h3>
+        <div class="headcards">
+          <div class="card">
+              <a class="card-image" href="http://station.eu5.org/Assets/Img/sm5.jp" target="_blank"
+                 style="background-image: url(http://station.eu5.org/Assets/Img/sm5.jpg);">
+                  <img src="http://station.eu5.org/Assets/Img/sm5.jpg" alt="Psychopomp"/>
+              </a>
+              <a class="card-description" href="http://station.eu5.org/Assets/Img/sm5.jp" target="_blank">
+                  <h2>Psychopomp</h2>
+                  <p>Japanese Breakfast</p>
+              </a>
+          </div>
+          <div class="card">
+              <a class="card-image" href="http://station.eu5.org/Assets/Img/sm5.jp" target="_blank"
+                 style="background-image: url(http://station.eu5.org/Assets/Img/sm5.jpg);">
+                  <img src="http://station.eu5.org/Assets/Img/sm5.jpg" alt="Psychopomp"/>
+              </a>
+              <a class="card-description" href="http://station.eu5.org/Assets/Img/sm5.jp" target="_blank">
+                  <h2>Psychopomp</h2>
+                  <p>Japanese Breakfast</p>
+              </a>
+          </div>
+          <div class="card">
+              <a class="card-image" href="http://station.eu5.org/Assets/Img/sm5.jp" target="_blank"
+                 style="background-image: url(http://station.eu5.org/Assets/Img/sm5.jpg);">
+                  <img src="http://station.eu5.org/Assets/Img/sm5.jpg" alt="Psychopomp"/>
+              </a>
+              <a class="card-description" href="http://station.eu5.org/Assets/Img/sm5.jp" target="_blank">
+                  <h2>Psychopomp</h2>
+                  <p>Japanese Breakfast</p>
+              </a>
+          </div>
+          <div class="card">
+              <a class="card-image" href="http://station.eu5.org/Assets/Img/sm5.jp" target="_blank"
+                 style="background-image: url(http://station.eu5.org/Assets/Img/sm5.jpg);">
+                  <img src="http://station.eu5.org/Assets/Img/sm5.jpg" alt="Psychopomp"/>
+              </a>
+              <a class="card-description" href="http://station.eu5.org/Assets/Img/sm5.jp" target="_blank">
+                  <h2>Psychopomp</h2>
+                  <p>Japanese Breakfast</p>
+              </a>
+          </div>
 
-                </div>
-                <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
-                    <div class="Featured-card mr-5">
-                        <a href="#" class="img_container">
-                            <img src=" Assets/Img/Features.jpg" width="100%">
-
-                        </a>
-                        <div class="Featured-card-title ">
-                            <a href="# ">
-                                <h4> Shusi Shusi</h4>
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-                <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
-                    <div class="Featured-card mr-5">
-                        <a href="#" class="img_container">
-                            <img src=" Assets/Img/Features.jpg" width="100%">
-
-                        </a>
-                        <div class="Featured-card-title ">
-                            <a href="# ">
-                                <h4> Shusi Shusi</h4>
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-                <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">
-                    <div class="Featured-card mr-5">
-                        <a href="#" class="img_container">
-                            <img src=" Assets/Img/Features.jpg" width="100%">
-
-                        </a>
-                        <div class="Featured-card-title ">
-                            <a href="# ">
-                                <h4> Shusi Shusi</h4>
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
+      </div>
     </section>
+    <!--    <section id="Featured">-->
+    <!--        <div class="container">-->
+    <!--            <h3>New Menus</h3>-->
+    <!--            <div class="row">-->
+    <!--                <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">-->
+    <!--                    <div class="Featured-card mr-5">-->
+    <!--                        <a href="#" class="img_container">-->
+    <!--                            <img src=" Assets/Img/Features.jpg" width="100%">-->
+
+    <!--                        </a>-->
+    <!--                        <div class="Featured-card-title ">-->
+    <!--                            <a href="# ">-->
+    <!--                                <h4> Shusi Shusi</h4>-->
+    <!--                            </a>-->
+    <!--                        </div>-->
+    <!--                    </div>-->
+
+    <!--                </div>-->
+    <!--                <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">-->
+    <!--                    <div class="Featured-card mr-5">-->
+    <!--                        <a href="#" class="img_container">-->
+    <!--                            <img src=" Assets/Img/Features.jpg" width="100%">-->
+
+    <!--                        </a>-->
+    <!--                        <div class="Featured-card-title ">-->
+    <!--                            <a href="# ">-->
+    <!--                                <h4> Shusi Shusi</h4>-->
+    <!--                            </a>-->
+    <!--                        </div>-->
+    <!--                    </div>-->
+
+    <!--                </div>-->
+    <!--                <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">-->
+    <!--                    <div class="Featured-card mr-5">-->
+    <!--                        <a href="#" class="img_container">-->
+    <!--                            <img src=" Assets/Img/Features.jpg" width="100%">-->
+
+    <!--                        </a>-->
+    <!--                        <div class="Featured-card-title ">-->
+    <!--                            <a href="# ">-->
+    <!--                                <h4> Shusi Shusi</h4>-->
+    <!--                            </a>-->
+    <!--                        </div>-->
+    <!--                    </div>-->
+
+    <!--                </div>-->
+    <!--                <div class=" col-xs-12 col-sm-6 col-md-3 d-flex">-->
+    <!--                    <div class="Featured-card mr-5">-->
+    <!--                        <a href="#" class="img_container">-->
+    <!--                            <img src=" Assets/Img/Features.jpg" width="100%">-->
+
+    <!--                        </a>-->
+    <!--                        <div class="Featured-card-title ">-->
+    <!--                            <a href="# ">-->
+    <!--                                <h4> Shusi Shusi</h4>-->
+    <!--                            </a>-->
+    <!--                        </div>-->
+    <!--                    </div>-->
+
+    <!--                </div>-->
+
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </section>-->
 
 
     <section id="Galery">
@@ -160,7 +207,7 @@
             </a>
             </a>
         </div>
-        <p class="see-all"><a href="Gallery.html" >See All</a></p>
+        <p class="see-all"><a href="Gallery.html">See All</a></p>
         </div>
     </section>
     <section id="Home-parallax">
