--- a/Menu.html
+++ b/Menu.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="Menu.html">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Reservation</a>
+                            <a class="nav-link" href="Reservation.html">Reservation</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
