--- a/Index.html
+++ b/Index.html
@@ -191,6 +191,14 @@
     <!--            </div>-->
     <!--        </div>-->
     <!--    </section>-->
+    <section id="Home-parallax1">
+        <div class="Homeparallax" style="background-image: url('/Assets/Img/sm5.jpg') ">
+            <div class="content-parallax">
+                <h1><a href="#rezerv" ><span>Reservation </span></a></h1>
+
+            </div>
+        </div>
+    </section>
 
 
     <section id="Galery">
@@ -210,10 +218,11 @@
         <p class="see-all"><a href="Gallery.html">See All</a></p>
         </div>
     </section>
-    <section id="Home-parallax">
+    <section id="Home-parallax2">
         <div class="Homeparallax" style="background-image: url('/Assets/Img/sm5.jpg') ">
             <div class="content-parallax">
-                <!--                <h1> Hello</h1>-->
+                                <h1><a href="#rezerv" ><span>ContactUs </span></a></h1>
+
             </div>
         </div>
     </section>
